# mrtklib-docker-ui

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
docs/: release-note.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: files.ts  index.ts  mrtkPost.ts  mrtkRelay.ts  mrtkRun.ts  obsQc.ts
frontend/src/components/: ConfigLoader.tsx  ConversionPanel.tsx  FileBrowserModal.tsx  FileNamingHelper.tsx  FilePreview.tsx  PositionScatter.tsx  PostProcessingConfiguration.tsx  PresetPanel.tsx  ProcessingConfigTabs.tsx  RealTimeProcessing.tsx  SignalSelectModal.tsx  SkyPlot.tsx  SkySnrPanel.tsx  SnrMaskModal.tsx  StatusIndicator.tsx  StreamConfiguration.tsx  StreamPathHelp.tsx  TabbedTerminalOutput.tsx  TerminalOutput.tsx  TimeSeriesChart.tsx  index.ts
frontend/src/config/: optionMeta.ts
frontend/src/hooks/: index.ts  useModeDependentDisable.ts  useWebSocket.ts
frontend/src/types/: mrtkPostConfig.ts  mrtkRunConfig.ts  streamConfig.ts
frontend/src/utils/: configToBackend.ts  gnssTime.ts  maskPath.ts  streamArgs.ts  tomlImport.ts
src/mrtklib_web_ui/: main.py
src/mrtklib_web_ui/api/: __init__.py  ai.py  config.py  convert.py  downloader.py  files.py  mrtk_post.py  mrtk_relay.py  mrtk_run.py  obs_qc.py  presets.py  process.py
src/mrtklib_web_ui/services/: __init__.py  config_parser.py  credentials.py  mask_credentials.py  mrtk_post_service.py  mrtk_run_service.py  mrtklib.py  (+3 more)
(+18 files in other folders)
